# pytemplate

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  pyproject.toml  requirements.txt  setup.py
