[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
version = "0.0.2"
requires-python = ">=3.6"
description = ""
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Jen Bradley", email = "jenbrad@umich.edu"},
]
dependencies = ["numpy>=1.19"]
dynamic = ["optional-dependencies"]

# [tool.setuptools.dynamic]
# optional-dependencies = {tests = { file = ["tests/requirements.txt"] }, doc = { file = ["doc/requirements.txt"] }}

[tool.pytest.ini_options]
console_output_style = "progress"
testpaths = ["tests"]

[tool.ruff]
include = ["*.py", "*.ipynb"]
# exclude = ["tests/data"]
line-length = 88

[tool.ruff.lint]
select = [
    "B",
    # "D",
    "E",
    "F",
    "I",
    "N",
    "S",
    "W",
    "C4",
    "UP",
    "NPY",
    "SIM",
    "PIE790",
    "PIE794",
]
ignore = [
  "S101", # Assertions are a good thing
  "D105", # Magic methods don't require documentation.
  "D107", # __init__ methods don't require documentation.
  "SIM116", # Allow certain branched if statements
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["hypothesis", "pytest"]
known-first-party = ["parsnip"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "B018", "F811"]
"__init__.py" = ["F401"] # Do not remove "unused" imports in __init__.py files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
